[metadata]
name = threatfox
version = 0.0.1
author = Sean McFeely
author_email = mcfeelynaes@gmail.com
description = Python library and command line tool for interacting with the ThreatFox API provided by abuse.ch.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Threat Fox, ThreatFox, abuse.ch, Threat Intel
url = https://github.com/seanmcfeely/ThreatFox
project_urls =
    Bug Tracker = https://github.com/seanmcfeely/ThreatFox/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    argparse
    coloredlogs
    aiodns
    aiohttp

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    threatfox = threatfox.cli:main